<resources>
    <string name="menuItem_toggleSpeed">Speed %1$d %%</string>
    <string name="menuItem_slotSave">Save slot</string>
    <string name="menuItem_slotLoad">Load slot</string>
    <string name="menuItem_setSlot">Slot %1$d</string>
    <string name="menuItem_selectSlot">Select Slot</string>
    <string name="menuItem_fileSave">Save to file&#8230;</string>
    <string name="menuItem_fileLoad">Load from file&#8230;</string>
    <string name="menuItem_fileLoadAutoSave">Load from auto save&#8230;</string>
    <string name="menuItem_screenshot">Screenshot</string>
    <string name="menuItem_setSpeed">Game speed</string>
    <string name="menuItem_enableFramelimiter">Sync audio</string>
    <string name="menuItem_disableFramelimiter">Desync audio</string>
    <string name="menuItem_player_one">Player 1</string>
    <string name="menuItem_player_two">Player 2</string>
    <string name="menuItem_player_three">Player 3</string>
    <string name="menuItem_player_four">Player 4</string>
    <string name="menuItem_paks">Controller Paks</string>
    <string name="menuItem_pak_empty">Empty</string>
    <string name="menuItem_pak_mem">Memory Pak</string>
    <string name="menuItem_pak_rumble">Rumble Pak</string>
    <string name="menuItem_pak_transfer">Transfer Pak</string>
    <string name="menuItem_paks_transfer">Transfer Paks</string>
    <string name="menuItem_paks_transfer_player1_rom">Player 1 Gameboy ROM</string>
    <string name="menuItem_paks_transfer_player1_ram">Player 1 Gameboy RAM</string>
    <string name="menuItem_paks_transfer_player2_rom">Player 2 Gameboy ROM</string>
    <string name="menuItem_paks_transfer_player2_ram">Player 2 Gameboy RAM</string>
    <string name="menuItem_paks_transfer_player3_rom">Player 3 Gameboy ROM</string>
    <string name="menuItem_paks_transfer_player3_ram">Player 3 Gameboy RAM</string>
    <string name="menuItem_paks_transfer_player4_rom">Player 4 Gameboy ROM</string>
    <string name="menuItem_paks_transfer_player4_ram">Player 4 Gameboy RAM</string>
    <string name="menuItem_setIme">Change IME</string>
    <string name="menuItem_exit">Exit</string>
    <string name="menuItem_deadzone">Deadzone</string>
    <string name="menuItem_auto">Auto</string>
    <string name="menuItem_sensitivity">Sensitivity</string>
    <string name="menuItem_sensitivity_x">X-axis Sensitivity</string>
    <string name="menuItem_sensitivity_y">Y-axis Sensitivity</string>
    <string name="menuItem_unmapAll">Unmap all</string>
    <string name="menuItem_search">Search</string>
    <string name="menuItem_play">Play</string>
    <string name="menuItem_refreshRoms">Refresh ROMs</string>
    <string name="menuItem_settings">Settings</string>
    <string name="menuItem_globalSettings">Global settings</string>
    <string name="menuItem_sensorConfiguration">Sensor configuration</string>
    <string name="menuItem_buttonsConfiguration">Buttons configuration</string>
    <string name="menuItem_profiles">Profiles</string>
    <string name="menuItem_emulationProfiles">Emulation</string>
    <string name="menuItem_touchscreenProfiles">Touchscreen</string>
    <string name="menuItem_controllerProfiles">Controller</string>
    <string name="menuItem_select_profiles">Select Profiles</string>
    <string name="menuItem_help">Help</string>
    <string name="menuItem_faq">FAQ</string>
    <string name="menuItem_helpForum">Help forum</string>
    <string name="menuItem_controllerDiagnostics">Controller diagnostics</string>
    <string name="menuItem_reportBug">Report bug</string>
    <string name="menuItem_about">About</string>
    <string name="menuItem_credits">Credits</string>
    <string name="menuItem_appVersion">App version</string>
    <string name="menuItem_logcat">Logcat</string>
    <string name="menuItem_hardwareInfo">Hardware info</string>
    <string name="menuItem_Tools">Tools</string>
    <string name="menuItem_Extract">Add Texture Pack</string>
    <string name="menuItem_Clear">Clear Texture Packs</string>
    <string name="menuItem_ClearShaderCache">Clear Shader Cache</string>
    <string name="menuItem_ConfirmationClearShaderCache">Are you sure you would like to clear the shader cache?</string>
    <string name="menuItem_localeOverride">Language</string>
    <string name="menuItem_new">New</string>
    <string name="menuItem_hideBuiltins">Hide built-ins</string>
    <string name="menuItem_showBuiltins">Show built-ins</string>
    <string name="popup_titleBuiltin">%1$s (built-in)</string>
    <string name="popup_titleCustom">%1$s</string>
    <string name="profile_name_cannot_be_empty">Name cannot be empty</string>
    <string name="profile_name_cannot_contain_brackets">Name cannot contain brackets</string>
    <string name="profile_name_must_be_unique">Name must be unique</string>
    <string name="profile_manage_profiles">Manage profiles</string>
    <string name="actionResume_title">Resume</string>
    <string name="actionResume_summary">Start from last automatic save</string>
    <string name="actionStart_title">Start</string>
    <string name="actionStart_summary">Reset the game</string>
    <string name="actionConnectNetplay_title">Connect netplay</string>
    <string name="actionConnectNetplay_summary">Connect to a netplay server with this game.</string>
    <string name="actionStartNetplay_title">Netplay server</string>
    <string name="actionStartNetplay_summary">Start netplay server with this game.</string>
    <string name="actionRemove_title">Remove</string>
    <string name="actionRemove_summary">Remove from library</string>
    <string name="actionCreateShortcut_title">Create shortcut</string>
    <string name="actionCreateShortcut_summary">Add a shortcut to this ROM in the default app launcher</string>
    <string name="actionReloadAssets_title">Reload app resources</string>
    <string name="actionReloadAssets_summary">Does NOT affect user settings, ROMs, game saves, or other custom data</string>
    <string name="actionResetUserPrefs_title">Defaults</string>
    <string name="actionResetUserPrefs_summary">Restore default global settings</string>
    <string name="categoryLibrary_title">Library</string>
    <string name="categoryDisplay_title">Display</string>
    <string name="categoryAudio_title">Audio</string>
    <string name="categoryTouchscreen_title">Touchscreen</string>
    <string name="categoryInput_title">Input</string>
    <string name="categoryData_title">Data</string>
    <string name="retroAchievementsEnabled_title">Enable RetroAchievements</string>
    <string name="retroAchievementsEnabled_summary">Unlock achievements while playing N64 games</string>
    <string name="retroAchievementsStatus_title">Status</string>
    <string name="retroAchievementsUsername_title">Username</string>
    <string name="retroAchievementsPassword_title">Password</string>
    <string name="retroAchievementsLogin_title">Log In</string>
    <string name="retroAchievementsLogin_summary">Connect to retroachievements.org</string>
    <string name="retroAchievementsLogout_title">Log Out</string>
    <string name="retroAchievementsRichPresence_title">Rich presence</string>
    <string name="retroAchievementsRichPresence_summary">Report current game activity to RetroAchievements (e.g. which level you are in)</string>
    <string name="retroAchievementsUnofficialEnabled_title">Test unofficial achievements</string>
    <string name="retroAchievementsUnofficialEnabled_summary">Load and track unofficial achievements (for developers and testers)</string>
    <string name="useHighPriorityThread_title">Use high priority thread</string>
    <string name="useHighPriorityThread_summary">Core will run using a high priority thread, this can cause stutters on some devices</string>
    <string name="inputVolumeMappable_title">Mappable volume keys</string>
    <string name="inputVolumeMappable_summary">Allow volume keys to be mapped to controls</string>
    <string name="inputBackMappable_title">Mappable back key</string>
    <string name="inputBackMappable_summary">Allow back key to be mapped to controls, this will force the swipe gesture to be used for the in-game menu</string>
    <string name="inputMenuMappable_title">Mappable menu key</string>
    <string name="inputMenuMappable_summary">Allow menu key to be mapped to controls, this will force the swipe gesture to be used for the in-game menu</string>
    <string name="inputUseRaphnetAdapter_title">Use Raphnet adapter raw USB access</string>
    <string name="inputUseRaphnetAdapter_summary">If a Raphnet adapter is found, it will be used over other controllers in raw USB access mode.</string>
    <string name="audioSynchronize_title">Synchronize audio and video</string>
    <string name="audioSynchronize_summary">Minimizes latency, but may cause crackling in some games/devices</string>
    <string name="audioSwapChannels_title">Swap audio channels</string>
    <string name="audioSwapChannels_summary">Swap the left and right audio channels</string>
    <string name="audioTimeStretch_title">Time stretch audio</string>
    <string name="audioTimeStretch_summary">Enable time stretch audio to reduce crackling, but introduces audio lag</string>
    <string name="audioLowPerformanceMode_title">Low performance mode</string>
    <string name="audioLowPerformanceMode_summary">Better performance at the cost of audio latency.</string>
    <string name="navigationMode_title">Accessibility</string>
    <string name="navigationMode_summary">Menu navigation mode: %1$s</string>
    <string name="inGameMenuSetting_title">Show in-game menu</string>
    <string name="audioVolume_title">Audio Volume</string>
    <string name="audioBufferSize_title">Audio Buffer Size</string>
    <string name="audioSamplingType_title">Sampling Type</string>
    <string name="audioFloatingPoint_title">Floating Point Samples</string>
    <string name="audioFloatingPoint_summary">Higher quality FP audio. Some devices may not be compatible.</string>
    <string name="GameAutoSavesMax_title">Max auto saves per game</string>
    <string name="useFlatGameDataPath_title">Use flat game data folder structure</string>
    <string name="useFlatGameDataPath_summary">Keep all slot saves, screenshots, and in-game saves in the same folder</string>
    <string name="importExportActivity_exportGameData">Export Game Data</string>
    <string name="importExportActivity_exportCheatsAndProfiles">Export Cheats and Profiles</string>
    <string name="importExportActivity_importGameData">Import Game Data</string>
    <string name="importExportActivity_importCheatsAndProfiles">Import Cheats and Profiles</string>
    <string name="importExportActivity_importTouchscreenGraphics">Import Touchscreen Graphics</string>
    <string name="touchscreenProfileActivity_buttons">Buttons</string>
    <string name="controller_analog">Analog stick</string>
    <string name="controller_dpad">D-pad</string>
    <string name="controller_groupAB">A/B buttons</string>
    <string name="controller_buttonA">A button</string>
    <string name="controller_buttonB">B button</string>
    <string name="controller_groupC">C buttons</string>
    <string name="controller_buttonL">L button</string>
    <string name="controller_buttonR">R button</string>
    <string name="controller_buttonZ">Z button</string>
    <string name="controller_buttonS">Start button</string>
    <string name="controller_buttonSensor">Toggle sensor button</string>
</resources>