<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuItem_resume"
        android:icon="@drawable/ic_play"
        android:title="@string/actionResume_title"
        android:titleCondensed="@string/actionResume_summary"/>
    <item
        android:id="@+id/menuItem_start"
        android:icon="@drawable/ic_undo"
        android:title="@string/actionStart_title"
        android:titleCondensed="@string/actionStart_summary"/>
    <item
        android:id="@+id/menuItem_connectNetplayServer"
        android:icon="@drawable/ic_users"
        android:title="@string/actionConnectNetplay_title"
        android:titleCondensed="@string/actionConnectNetplay_summary"/>
    <item
        android:id="@+id/menuItem_startNetplayServer"
        android:icon="@drawable/ic_users"
        android:title="@string/actionStartNetplay_title"
        android:titleCondensed="@string/actionStartNetplay_summary"/>
    <item
        android:id="@+id/menuItem_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menuItem_settings"/>
    <item
        android:id="@+id/menuItem_remove"
        android:icon="@drawable/ic_storage"
        android:title="@string/actionRemove_title"
        android:titleCondensed="@string/actionRemove_summary"/>
    <item
        android:id="@+id/menuItem_createShortcut"
        android:icon="@drawable/ic_storage"
        android:title="@string/actionCreateShortcut_title"
        android:titleCondensed="@string/actionCreateShortcut_summary"/>

</menu>