<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mupen64="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menuItem_library"
        android:icon="@drawable/ic_controller"
        android:title="@string/categoryLibrary_title"/>
    <item
        android:id="@+id/menuItem_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menuItem_settings">
        <menu>
            <item
                android:id="@+id/menuItem_categoryLibrary"
                android:title="@string/categoryLibrary_title"/>
            <item
                android:id="@+id/menuItem_categoryDisplay"
                android:title="@string/categoryDisplay_title"/>
            <item
                android:id="@+id/menuItem_categoryAudio"
                android:title="@string/categoryAudio_title"/>
            <item
                android:id="@+id/menuItem_categoryTouchscreen"
                android:title="@string/categoryTouchscreen_title"/>
            <item
                android:id="@+id/menuItem_categoryInput"
                android:title="@string/categoryInput_title"/>
            <item
                android:id="@+id/menuItem_categoryData"
                android:title="@string/categoryData_title"/>
        </menu>
    </item>
    <item
        android:id="@+id/menuItem_profiles"
        android:icon="@drawable/ic_sliders"
        android:title="@string/menuItem_profiles">
        <menu>
            <item
                android:id="@+id/menuItem_emulationProfiles"
                android:title="@string/menuItem_emulationProfiles"/>
            <item
                android:id="@+id/menuItem_touchscreenProfiles"
                android:title="@string/menuItem_touchscreenProfiles"/>
            <item
                android:id="@+id/menuItem_controllerProfiles"
                android:title="@string/menuItem_controllerProfiles"/>
        </menu>
    </item>
    <item
        android:id="@+id/menuItem_tools"
        android:icon="@drawable/ic_circuit"
        android:title="@string/menuItem_Tools">
        <menu>
            <item
                android:id="@+id/menuItem_extract"
                android:title="@string/menuItem_Extract"/>
            <item
                android:id="@+id/menuItem_clear"
                android:title="@string/menuItem_Clear"/>
            <item
                android:id="@+id/menuItem_logcat"
                android:title="@string/menuItem_logcat"/>
            <item
                android:id="@+id/menuItem_hardwareInfo"
                android:title="@string/menuItem_hardwareInfo"/>
        </menu>
    </item>
    <item
        android:id="@+id/menuItem_help"
        android:icon="@drawable/ic_help"
        android:title="@string/menuItem_help">
        <menu>
            <item
                android:id="@+id/menuItem_faq"
                android:title="@string/menuItem_faq"/>
            <item
                android:id="@+id/menuItem_helpForum"
                android:title="@string/menuItem_helpForum"/>
            <item
                android:id="@+id/menuItem_controllerDiagnostics"
                android:title="@string/menuItem_controllerDiagnostics"/>
            <item
                android:id="@+id/menuItem_reportBug"
                android:title="@string/menuItem_reportBug"/>
        </menu>
    </item>
    <item
        android:id="@+id/menuItem_about"
        android:icon="@drawable/ic_about"
        android:title="@string/menuItem_about">
        <menu>
            <item
                android:id="@+id/menuItem_appVersion"
                android:title="@string/menuItem_appVersion"/>
            <item
                android:id="@+id/menuItem_credits"
                android:title="@string/menuItem_credits"/>
        </menu>
    </item>
    <item
        android:id="@+id/menuItem_localeOverride"
        android:icon="@drawable/ic_location"
        android:title="@string/menuItem_localeOverride"/>
    <item
        android:id="@+id/menuItem_donate"
        android:icon="@drawable/ic_coins_l"
        android:title="@string/menuItem_donate"/>

</menu>